# transformer_ros2_workspace

./: .clang-format  .gitignore  .gitmodules  README.md  compile_commands.json  msp_messages.md  start_transformer.sh
msp_bridge/: CMakeLists.txt  README.md  package.xml
msp_bridge/include/msp_bridge/: msp_protocol.hpp  msp_registry.hpp  serial_port.hpp
msp_bridge/src/: msp_bridge_node.cpp  msp_protocol.cpp  msp_registry.cpp  serial_port.cpp
software_pwm/: CMakeLists.txt  package.xml
software_pwm/action/: MoveServo.action
software_pwm/src/: software_pwm_node.cpp
src/transformer_bringup/: package.xml
src/transformer_bringup/config/: realsense.yaml
src/transformer_bringup/launch/: transformer_bringup.launch.py
src/transformer_controller/: CMakeLists.txt  package.xml
src/transformer_controller/action/: TransformMode.action
src/transformer_controller/include/transformer_controller/: transformer_controller_node.hpp
src/transformer_controller/launch/: transformer_controller.launch.py
src/transformer_controller/src/: transformer_controller_node.cpp
src/transformer_description/: CMakeLists.txt  README.md  package.xml
src/transformer_description/launch/: display.launch.py
src/transformer_description/model/: transformer_model.stl
src/transformer_description/urdf/: transformer.urdf.xacro
src/transformer_hw_actuators/: CMakeLists.txt
src/transformer_hw_actuators/action/: MoveActuator.action
src/transformer_hw_actuators/include/transformer_hw_actuators/: actuator_node.h  actuator_node.hpp
src/transformer_hw_actuators/src/: actuator_node.cpp
src/transformer_hw_servos/: CMakeLists.txt  README.md  package.xml
src/transformer_hw_servos/config/: servos.yaml
src/transformer_hw_servos/include/transformer_hw_servos/: servo_controller_node.hpp
src/transformer_hw_servos/launch/: servos.launch.py
src/transformer_hw_servos/src/: servos_node.cpp
src/transformer_hw_servos/src/backends/: lgpio_backend.cpp  pca9685_backend.cpp
src/transformer_msp_bridge/: CMakeLists.txt  README.md  package.xml
src/transformer_msp_bridge/config/: msp_bridge.yaml  msp_messages_inav.json
src/transformer_msp_bridge/include/transformer_msp_bridge/: .hpp.cpp  crc.hpp  decoder_base.hpp  decoder_outputs.hpp  decoder_registry.hpp  msp_builders.hpp  msp_messages_inav.hpp  msp_parser.hpp  msp_registry.hpp  msp_utils.hpp  registry_loader.hpp  serial_port.hpp  simple_json.hpp  transformer_msp_bridge_node.hpp
src/transformer_msp_bridge/scripts/: joystick_tank_to_rc.py  keyboard_to_joy_mix.py
src/transformer_msp_bridge/src/: msp_builders.cpp  msp_parser.cpp  msp_registry.cpp  msp_utils.cpp  registry_loader.cpp  serial_port.cpp  transformer_msp_bridge_node.cpp  transformer_msp_bridge_node_decoders.cpp  transformer_msp_bridge_node_publishers.cpp
src/transformer_msp_bridge/src/decoders/: altitude_decoder.cpp  attitude_decoder.cpp  battery_decoder.cpp  gps_decoder.cpp  imu_decoder.cpp  inav_generic_decoder.cpp  inav_status_decoder.cpp  rc_decoder.cpp  sensor_decoder.cpp  servo_motor_decoder.cpp  system_decoder.cpp
src/transformer_msp_bridge/test/: schema_expectations.hpp  test_altitude_decoder.cpp  test_attitude_decoder.cpp  test_battery_decoder.cpp  test_crc.cpp  test_decoder_coverage.cpp  test_gps_decoder.cpp  test_imu_decoder.cpp  test_msp_parser.cpp  test_msp_parser_fuzz.cpp  test_msp_probe.cpp  test_msp_registry.cpp  test_rc_decoder.cpp  test_sensor_decoder.cpp  test_servo_motor_decoder.cpp  test_system_decoder.cpp
src/transformer_rc_mode_switch/: CMakeLists.txt
src/transformer_rc_mode_switch/launch/: rc_mode_switch.launch.py
src/transformer_rc_mode_switch/src/: rc_mode_switch_node.cpp
transformer_bringup/: CMakeLists.txt  package.xml
transformer_bringup/launch/: transformer_bringup.launch.py
transformer_hw_servos/: CMakeLists.txt  README.md  package.xml
transformer_hw_servos/action/: MoveServo.action
transformer_hw_servos/config/: servos.yaml
transformer_hw_servos/include/transformer_hw_servos/: servo_backend.hpp
transformer_hw_servos/launch/: servos.launch.py
transformer_hw_servos/src/: servos_node.cpp
transformer_hw_servos/src/backends/: lgpio_backend.cpp  pca9685_backend.cpp
transformer_hw_servos/srv/: SetDualServoPulse.srv  SetServoPulse.srv
transformer_msp_bridge/: CMakeLists.txt  README.md  REGISTRY.md  package.xml
transformer_msp_bridge/config/: msp_bridge.yaml  registry.yaml
transformer_msp_bridge/include/msp_bridge/: msp_protocol.hpp  msp_registry.hpp  serial_port.hpp
transformer_msp_bridge/include/transformer_msp_bridge/: command_config.hpp  crc.hpp  decoder_base.hpp  decoder_registry.hpp  msp_builders.hpp  msp_parser.hpp  msp_protocol.hpp  msp_registry.hpp  msp_utils.hpp  registry_loader.hpp  serial_port.hpp
transformer_msp_bridge/include/transformer_msp_bridge/decoders/: gps_decoder.hpp  (+10 more)
transformer_msp_bridge/scripts/: joystick_tank_to_rc.py  keyboard_to_joy_mix.py
transformer_msp_bridge/src/: battery_decoder.cpp  crc.cpp  msp_builders.cpp  msp_parser.cpp  msp_probe.cpp  msp_protocol.cpp  msp_registry.cpp  msp_utils.cpp  registry_dump.cpp  registry_loader.cpp  serial_port.cpp  transformer_msp_bridge_node.cpp
transformer_msp_bridge/src/decoders/: altitude_decoder.cpp  attitude_decoder.cpp  battery_decoder.cpp  gps_decoder.cpp  imu_decoder.cpp  inav_generic_decoder.cpp  inav_status_decoder.cpp  rc_decoder.cpp  sensor_decoder.cpp  servo_motor_decoder.cpp  system_decoder.cpp
transformer_msp_bridge/test/: test_altitude_decoder.cpp  test_attitude_decoder.cpp  test_battery_decoder.cpp  test_crc.cpp  test_decoder_coverage.cpp  test_gps_decoder.cpp  test_imu_decoder.cpp  test_inav_status_decoder.cpp  test_msp_parser.cpp  test_msp_parser_fuzz.cpp  test_msp_parser_hardening.cpp  test_msp_probe.cpp  test_msp_registry.cpp  test_rc_decoder.cpp  test_sensor_decoder.cpp  test_servo_motor_decoder.cpp  test_system_decoder.cpp  test_system_decoder_extended.cpp
transformer_rc_mode_switch/: CMakeLists.txt  package.xml
transformer_rc_mode_switch/launch/: rc_mode_switch.launch.py
transformer_rc_mode_switch/src/: rc_mode_switch_node.cpp
(+240 files in other folders)
