<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transformer_hw_servos</name>
  <version>0.1.0</version>
  <description>Dual-servo software PWM controller (50 Hz) using libgpiod with a service interface.</description>
  <maintainer email="j.lehnerdt@tum.de">atvpi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- System deps -->
  <build_depend>libgpiod-dev</build_depend>
  <exec_depend>libgpiod-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
