<package format="3">
  <name>transformer_controller</name>
  <version>0.0.1</version>
  <description>High-level transformation controller orchestrating actuators and servos for drive/flight mode transitions.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>transformer_hw_actuators</depend>
  <depend>transformer_hw_servos</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
